--- a/testingOcrowd2/Base.lproj/Main.storyboard
+++ b/testingOcrowd2/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <!--First View Controller - First-->
         <scene sceneID="W3I-pn-N6e">
             <objects>
-                <viewController title="First" id="CZ4-MO-1fc" customClass="FirstViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="firstView" title="First" id="CZ4-MO-1fc" customClass="FirstViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="s9W-kb-ARv"/>
                         <viewControllerLayoutGuide type="bottom" id="dtj-EO-iXF"/>
@@ -24,10 +24,28 @@
             </objects>
             <point key="canvasLocation" x="1179" y="-200"/>
         </scene>
-        <!--View Controller-->
+        <!--First Second View Controller-->
+        <scene sceneID="naR-BB-MiH">
+            <objects>
+                <viewController storyboardIdentifier="secondView" id="cZV-FY-pAZ" customClass="FirstSecondViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1av-io-VbM"/>
+                        <viewControllerLayoutGuide type="bottom" id="yQ8-WD-x9z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nIW-hu-rUY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Erl-UY-Vob" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1555" y="-200"/>
+        </scene>
+        <!--Fourth View Controller-->
         <scene sceneID="gGf-pr-gtY">
             <objects>
-                <viewController id="nd5-Jd-GEQ" sceneMemberID="viewController">
+                <viewController id="nd5-Jd-GEQ" customClass="FourthViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Iz4-QB-ESx"/>
                         <viewControllerLayoutGuide type="bottom" id="7Jv-HB-hw1"/>
@@ -37,7 +55,17 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="5QU-wh-Cjm"/>
+                    <navigationItem key="navigationItem" id="5QU-wh-Cjm">
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="c9w-Xe-dzC">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="AEV-YS-Ffj">
+                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O92-mB-fgf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -146,10 +174,10 @@
             </objects>
             <point key="canvasLocation" x="132" y="180"/>
         </scene>
-        <!--Navigation Controller - First-->
+        <!--Navigation View Controller - First-->
         <scene sceneID="KEQ-vR-dK8">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kHk-sg-Zjz" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kHk-sg-Zjz" customClass="NavigationViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="First" image="first" id="u1e-5L-l1D"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="yEm-01-GWJ">
